fix: Fix overlap with experience on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -369,6 +369,7 @@ h6 {
 .main__about-me {
   height: 100vh;
   width: 100vw;
+  margin-bottom: 100px;
 }
 
 .about-me__wrapper {
@@ -540,7 +541,7 @@ h6 {
 .experience__content {
   display: flex;
   gap: 20px;
-  height: 285px;
+  min-height: 285px;
 }
 
 .content__experience-list {
